feat: user can pin projects
